Rule DM_NUMBER_CTOR issues